@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 2?
 Core and builtins
 -----------------
 
+- Issue #2321: use pymalloc for unicode object string data to reduce
+  memory usage in some circumstances.
+
 - PEP 3127: octal literals now start with "0o". Old-style octal literals
   are still valid. There are binary literals with a prefix of "0b".
   This also affects int(x, 0).
